remove additional domain slice and controller
