# docs/swagger.yaml
@@ -1,15 +1,5 @@
 basePath: /api
 definitions:
-  controllers.CreateProductRequest:
-    properties:
-      name:
-        type: string
-      price:
-        type: number
-    required:
-    - name
-    - price
-    type: object
   controllers.CreateUserRequest:
     properties:
       email:
@@ -19,25 +9,6 @@ definitions:
     required:
     - email
     - name
-    type: object
-  controllers.ProductResponse:
-    properties:
-      id:
-        type: integer
-      name:
-        type: string
-      price:
-        type: number
-    type: object
-  controllers.UpdateProductRequest:
-    properties:
-      name:
-        type: string
-      price:
-        type: number
-    required:
-    - name
-    - price
     type: object
   controllers.UpdateUserRequest:
     properties:
@@ -65,168 +36,6 @@ info:
   title: Go Starter API
   version: "1.0"
 paths:
-  /products:
-    get:
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/controllers.ProductResponse'
-            type: array
-        "500":
-          description: Internal Server Error
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: List products
-      tags:
-      - products
-    post:
-      consumes:
-      - application/json
-      parameters:
-      - description: Product payload
-        in: body
-        name: body
-        required: true
-        schema:
-          $ref: '#/definitions/controllers.CreateProductRequest'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/controllers.ProductResponse'
-        "400":
-          description: Bad Request
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "500":
-          description: Internal Server Error
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: Create a product
-      tags:
-      - products
-  /products/{id}:
-    delete:
-      parameters:
-      - description: Product ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      responses:
-        "204":
-          description: No Content
-        "400":
-          description: Bad Request
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "404":
-          description: Not Found
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "500":
-          description: Internal Server Error
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: Delete a product
-      tags:
-      - products
-    get:
-      parameters:
-      - description: Product ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/controllers.ProductResponse'
-        "400":
-          description: Bad Request
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "404":
-          description: Not Found
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "500":
-          description: Internal Server Error
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: Get a product by ID
-      tags:
-      - products
-    put:
-      consumes:
-      - application/json
-      parameters:
-      - description: Product ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      - description: Product payload
-        in: body
-        name: body
-        required: true
-        schema:
-          $ref: '#/definitions/controllers.UpdateProductRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/controllers.ProductResponse'
-        "400":
-          description: Bad Request
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "404":
-          description: Not Found
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "500":
-          description: Internal Server Error
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: Update a product
-      tags:
-      - products
   /users:
     get:
       produces:
